project archive: fallback for no WebGL support

--- a/assets/css/sass/views/_archive.scss
+++ b/assets/css/sass/views/_archive.scss
@@ -1,5 +1,6 @@
 .hentry {
-    .no-js {
+    .no-js &,
+    .no-mapbox-support & {
         opacity: 1 !important;
     }
     .post-type-archive & {
