give page a white background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,9 @@ body {
     .media-size:before {
       content: "xl"; } }
 
+#page {
+  background: white; }
+
 /* Typography
  * ------------------------------------------ */
 html {
