adjust flex item padding refs #9, #13

--- a/assets/css/sass/shared/_variables.scss
+++ b/assets/css/sass/shared/_variables.scss
@@ -4,6 +4,7 @@ $max-width: rem(1240) !global;
 $grid-columns: 12 !global;
 
 $container-padding: 70px;
+$flex-item-padding: 18px;
 
 // Breakpoints
 // ------------------------------------------- /
