build out support for non WebGL browsers

--- a/assets/css/sass/views/_single-project.scss
+++ b/assets/css/sass/views/_single-project.scss
@@ -1,3 +1,8 @@
+
+#single-project-map.mapboxgl-supported {
+    height: rem(350);
+}
+
 .project-content {
     @include media($lg) {
         @include span-columns(7);
