--- a/assets/css/sass/blocks/_buttons.scss
+++ b/assets/css/sass/blocks/_buttons.scss
@@ -6,19 +6,16 @@
 	color: $color-btn;
 	display: inline-block;
 	font-family: $gta-extended-black;
-	font-size: 1rem;
-	font-weight: 700;
-	letter-spacing: 0.1em;
-	line-height: 1em;
-	padding: 0.6em 1em 0.4em;
+	font-size: rem(24);
+	line-height: 1;
+	font-weight: normal;
+	padding: 0.5em 0.8em;
 	text-shadow: none;
 	text-align: center;
-    font-size: rem(12);
     text-transform: uppercase;
-    padding: 1.25em 2.5em;
     cursor: pointer;
     @include appearance(none);
-    @include transition(all 300ms ease);
+    @include transition(all 200ms ease);
 
 	&:hover, &:focus {
 		background-color: $color-btn-bg-hover;
