--- a/assets/css/sass/blocks/_forms.scss
+++ b/assets/css/sass/blocks/_forms.scss
@@ -1,11 +1,59 @@
 /* Basic Form Styles
  * ------------------------------------------- */
 
-label {
-     display: block;
-     width: 100%;
-     padding-bottom: 0.25em;
-     margin-top: 0;
+.label {
+    @extend .h6;
+    @extend .u-mt-0;
+    display: block;
+
+    [type="radio"] + & {
+        position: relative;
+        padding-top: 55px;
+        cursor: pointer;
+        text-align: center;
+        width: auto;
+        min-width: 50px;
+        display: inline-block;
+    
+        &:before {
+            content: "";
+            display: block;
+            width: 50px;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            height: 50px;
+            border: 1px solid;
+            border-radius: 50%;
+            cursor: pointer;
+            transform: translateX(-50%);
+        }
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            background: tint(black, 80%);
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            transform: translateX(-50%) scale(0);
+            transition: all 100ms ease-out;
+        }
+    }
+    [type="radio"]:not(:checked) + &:hover:after {
+        transform: translateX(-50%) scale(0.5);
+    }
+    [type="radio"]:checked + &:after {
+        transform: translateX(-50%) scale(1);
+        background: #000;
+    }
+    
+}
+
+[type="radio"] {
+    display: none;
 }
 
 .form-group {
@@ -16,18 +64,16 @@ label {
 }
 
 .form-field {
-    display: block;
-    width: 100%;
     color: $color-text-input;
     border: 0;
-    border-bottom: $border-width solid transparent;
+    border-bottom: $border-width solid black;
     border-radius: 0;
     background-color: transparent;
     box-sizing: border-box;
     padding: 0;
-    @extend .u-pt-1;
     outline: 0;
     @include transition( all 300ms ease );
+    @include appearance(none);
 
     &:hover {
         color: $color-text-input-hover;
@@ -35,11 +81,17 @@ label {
     &:focus {
         border-color: $color-text-input-focus;
         color: $color-text-input-focus;
-        @extend .u-py-1;
         border-color: $color-border-input-focus;
     }
 
     @include placeholder {
         color: lightgray;
+    }
+}
+
+.u-show-on-checked {
+    display: none;
+    input:checked ~ & {
+        display: inline-block;
     }
 }
