--- a/assets/css/sass/shared/utility/_grid.scss
+++ b/assets/css/sass/shared/utility/_grid.scss
@@ -96,3 +96,10 @@
         margin-right: 0;
     }
 }
+
+.u-width-25 { width: 25%; }
+.u-width-33 { width: 33.333%; }
+.u-width-50 { width: 50%; }
+.u-width-66 { width: 66.666%; }
+.u-width-75 { width: 75%; }
+.u-width-100 { width: 100%; }
